// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch-update fail and show test stdout 1`] = `
"[J
[s[JInstalling missing dependencies[90m...[39m
[90m> npm install [39m
...
[u[s[JLooking for outdated modules[90m...[39m
[90m> npm outdated [39m
...
[u[JFound [1m4 updates[22m.

[s[J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.1.0[90m...[39m
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 1.0.0[90m...[39m
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m
[90m> npm install [39m
...
[u[s[J[33m●[39m [1mmodule[22m [90mtesting...[39m
[33m●[39m [1mmodule[22m [90mtesting...[39m
[33m●[39m [1mmodule[22m [90mtesting...[39m
[33m●[39m [1mmodule[22m [90mtesting...[39m
[90m> npm test [39m
...
[u[s[J[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.0.1 [90m→[39m 0.0.0[90m...[39m
[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.1.0 [90m→[39m 0.0.0[90m...[39m
[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 1.0.0 [90m→[39m 0.0.0[90m...[39m
[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.0.1 [90m→[39m 0.0.0[90m...[39m
[90m> npm install [39m
...
[u[J[31m●[39m [1m[31mmodule[39m[22m 0.0.1 [90mfailed[39m
[31m●[39m [1m[31mmodule[39m[22m 0.1.0 [90mfailed[39m
[31m●[39m [1m[31mmodule[39m[22m 1.0.0 [90mfailed[39m
[31m●[39m [1m[31mmodule[39m[22m 0.0.1 [90mfailed[39m
[JThis is the test stdout
[J
[J[1m2 successful[22m updates.
[J[1m1 failed[22m update.
[J
Finished after 1.0s.
"
`;

exports[`batch-update success and show test stdout 1`] = `
"[J
[s[JInstalling missing dependencies[90m...[39m
[90m> npm install [39m
...
[u[s[JLooking for outdated modules[90m...[39m
[90m> npm outdated [39m
...
[u[JFound [1m4 updates[22m.

[s[J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.1.0[90m...[39m
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 1.0.0[90m...[39m
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m
[90m> npm install [39m
...
[u[s[J[33m●[39m [1mmodule[22m [90mtesting...[39m
[33m●[39m [1mmodule[22m [90mtesting...[39m
[33m●[39m [1mmodule[22m [90mtesting...[39m
[33m●[39m [1mmodule[22m [90mtesting...[39m
[90m> npm test [39m
...
[u[J[32m●[39m [1mmodule[22m 0.0.1 [90msuccess[39m
[32m●[39m [1mmodule[22m 0.1.0 [90msuccess[39m
[32m●[39m [1mmodule[22m 1.0.0 [90msuccess[39m
[32m●[39m [1mmodule[22m 0.0.1 [90msuccess[39m
[J
[J[1m3 successful[22m updates.
[J
Finished after 1.0s.
"
`;

exports[`custom config and only excluded modules 1`] = `
"[JRunning updtr with custom configuration:

● exclude: b, c

[s[JInstalling missing dependencies[90m...[39m
[90m> npm install [39m
...
[u[s[JLooking for outdated modules[90m...[39m
[90m> npm outdated [39m
...
[u[J[1mNo updates available[22m for the given modules and version range
[J
[J[1m3 skipped[22m modules:

[90m●[39m [1ma[22m [90mgit[39m
[90m●[39m [1mb[22m [90mexcluded[39m
[90m●[39m [1mc[22m [90mexcluded[39m
[J
Finished after 1.0s.
"
`;

exports[`custom config and sequential-update with mixed success and show test stdout 1`] = `
"[JRunning updtr with custom configuration:

● exclude: b, c

[s[JInstalling missing dependencies[90m...[39m
[90m> npm install [39m
...
[u[s[JLooking for outdated modules[90m...[39m
[90m> npm outdated [39m
...
[u[JFound [1m4 updates[22m.

[s[J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m
[90m> npm install [39m
...
[u[s[J[33m●[39m [1mmodule[22m [90mtesting...[39m
[90m> npm test [39m
...
[u[J[32m●[39m [1mmodule[22m 0.0.1 [90msuccess[39m
[s[J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.1.0[90m...[39m
[90m> npm install [39m
...
[u[s[J[33m●[39m [1mmodule[22m [90mtesting...[39m
[90m> npm test [39m
...
[u[s[J[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.1.0 [90m→[39m 0.0.0[90m...[39m
[90m> npm install [39m
...
[u[J[31m●[39m [1m[31mmodule[39m[22m 0.1.0 [90mfailed[39m
[JThis is the test stdout
[s[J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 1.0.0[90m...[39m
[90m> npm install [39m
...
[u[s[J[33m●[39m [1mmodule[22m [90mtesting...[39m
[90m> npm test [39m
...
[u[J[32m●[39m [1mmodule[22m 1.0.0 [90msuccess[39m
[s[J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m
[90m> npm install [39m
...
[u[s[J[33m●[39m [1mmodule[22m [90mtesting...[39m
[90m> npm test [39m
...
[u[s[J[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.0.1 [90m→[39m 0.0.0[90m...[39m
[90m> npm install [39m
...
[u[J[31m●[39m [1m[31mmodule[39m[22m 0.0.1 [90mfailed[39m
[JThis is the test stdout
[J
[J[1m2 successful[22m updates.
[J[1m2 failed[22m updates.
[J
Finished after 1.0s.
"
`;

exports[`no outdated modules 1`] = `
"[J
[s[JInstalling missing dependencies[90m...[39m
[90m> npm install [39m
...
[u[s[JLooking for outdated modules[90m...[39m
[90m> npm outdated [39m
...
[u[JEverything [1mup-to-date[22m
[J
[J
Finished after 1.0s.
"
`;
